# ai-law-agents

./: .env  .env.sample  .gitignore  ABLATION_IMPLEMENTATION.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: bootstrap_issues.yml  e2e-echo.yml
bailiff/: __init__.py  cli.py
bailiff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bailiff/agents/: __init__.py  backends.py  backends_local.py  base.py  groq_pool.py  prompts.py
bailiff/analysis/: stats.py
bailiff/core/: __init__.py  config.py  events.py  io.py  logging.py  schema.py  session.py  tokenizer.py
bailiff/datasets/: __init__.py  templates.py
bailiff/datasets/cases/: dui.yaml  petty_theft.yaml  shoplifting.yaml  simple_assault.yaml  traffic.yaml  vandalism.yaml
bailiff/metrics/: __init__.py  outcome.py  procedural.py  tone.py
bailiff/orchestration/: __init__.py  blocks.py  pipeline.py  randomization.py
bailiff/schemas/: __init__.py  trial_log.schema.json
configs/: README.md  ablation_example.yaml  batch.yaml  pilot.yaml
docs/: ABLATION_GUIDE.md  API.md  OUTCOME_SCRIPTS.md  USER_GUIDE.md
notebooks/: README.md
ops/: issues.yml
scripts/: bootstrap_issues.py  demo_ablation.sh  outcome_gee_satt.R  outcome_glmm.R  outcome_wild_bootstrap.py  prepare_outcome_data.py  run_ablation.py  run_measurement_calibration.py  run_pilot_trial.py  run_tone_calibration.py  run_trial_matrix.py
tests/: helpers.py  interactive_tone_test.py  test_ablation.py  test_core_suite.py  test_e2e_echo.py  test_groq_pool.py  test_session.py  test_token_budget.py  test_tone_pipeline.py  test_verdict_parser.py
(+1 files in other folders)
