[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bailiff"
version = "0.1.0"
description = "Foundational scaffolding for the B.A.I.L.I.F.F. fairness evaluation harness."
readme = "README.md"
authors = [
  {name = "B.A.I.L.I.F.F. Team", email = "placeholder@uwo.ca"}
]
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "jsonschema>=4.21",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
agent = [
  "openai>=1.40",
  "anthropic>=0.34",
  "groq>=0.9",
  "google-generativeai>=0.7"
]
analysis = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotnine>=0.12"
]
local = [
  "transformers>=4.41",
  "llama-cpp-python>=0.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bailiff*"]
